2005-01-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
	        
	Final merge of HEAD patches to generics branch
	All changes are listed in merged Changelog.
	In addition,
	* java/lang/System.java:
	(getenv()): changed Runtime.securityManager to
	SecurityManager.current
	(getenv(String)): likewise
	(remove(String)): pointed to SystemProperties
	* gnu/classpath/SystemProperties.java:
	(remove(String)): implemented and documented

2005-01-15  Tom Tromey  <tromey@redhat.com>

	* javax/imageo/metadata: Merged from trunk.

2005-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
  
	* java/text/SimpleDateFormat.java:
	(getDateFormatSymbols()): return a copy
	(setDateFormatSymbols(java.text.DateFormatSymbols)):
	throw exception on null input
	(clone()): implemented to clone internal fields
  
2005-01-15  Mark Wielaard  <mark@klomp.org>
  
	Reported by Martin Platter <motse@complang.tuwien.ac.at>
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkFileDialogPeer_nativeSetFile):
	Correct method signature of gtkSetFilename.

2005-01-14  Sven de Marothy <sven@physto.se>
  
	* java/util/GregorianCalendar.java
	(GregorianCalendar): Update fields in the constructor
  
2005-01-14  Arnaud Vandyck  <avdyk@gnu.org>
  
	* javax/swing/text/StringContent.java: New file.
  
2005-01-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
  
	* java/text/SimpleDateFormat.java:
	(parse): extend try{} block so all illegal arguments
	are caught and returned as null
  
2005-01-13  Sven de Marothy <sven@physto.se>
  
	* java/text/SimpleDateFormat.java
	(parse): comparison should be case-insensitive, ignore null strings.
  
2005-01-13  Jeroen Frijters  <jeroen@frijters.net>
  
	* vm/reference/java/nio/channels/VMChannels.java: Class shouldn't
	be public.
	(newInputStream,newOutputStream): No need to be public.
  
2005-01-13  Michael Koch  <konqueror@gmx.de>
  
	* scripts/check_jni_methods.sh: Don't use GNU sed specific features.
  